--- a/src/style.css
+++ b/src/style.css
@@ -25,8 +25,8 @@
   .board {
     display: inline-grid;
     padding: 10px;
-    grid-template-columns: repeat(var(--size), 60px);
-    grid-template-rows: repeat(var(--size), 60px);
+    grid-template-columns: repeat(var(--size), var(--tile-size));
+    grid-template-rows: repeat(var(--size), var(--tile-size));
     gap: 4px;
     background-color: #777;
   }
